<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorGray"
    >

    <include layout="@layout/toolbar"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/enter_link"
        app:boxBackgroundColor="@color/colorViewGray"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopStart="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="10dp"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="19sp"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:backgroundTint = "@color/colorViewGray"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/iv_single_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_download_local"
        app:cornerRadius="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/download"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_download_storage"
        app:cornerRadius="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/download_storage"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_height="60dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeColor="@color/colorPrimary"
        android:visibility="gone"
        />

</LinearLayout>