<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_sheet_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/divider"
        android:showDividers="middle"
        android:dividerPadding="40dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="10"
            >

            <ImageView
                android:layout_width="0dp"
                android:padding="2dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_add_local"
                />

            <TextView
                android:id="@+id/tv_add_local"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:textColor="@color/colorWhite"
                android:textSize="19sp"
                android:gravity="center"
                android:text="@string/load_local"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="10"
            >

            <ImageView
                android:layout_width="0dp"
                android:padding="2dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_add_web"
                />

            <TextView
                android:id="@+id/tv_add_web"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:textColor="@color/colorWhite"
                android:textSize="19sp"
                android:gravity="center"
                android:text="@string/load_web"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="10"
            >

            <ImageView
                android:layout_width="0dp"
                android:padding="2dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_cancel"
                />

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:textColor="@color/colorWhite"
                android:textSize="19sp"
                android:gravity="center"
                android:text="@string/cancel"
                />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>